Hauteur fixe balise p collapseExpand

--- a/src/components/collapse/_collapse.scss
+++ b/src/components/collapse/_collapse.scss
@@ -25,10 +25,12 @@
 	}
 }
 .collapseExpand {
+	height: 180px;
 	transition-property: height;
 	transition-duration: 0.3s;
 	overflow: hidden;
 	p {
+		height: 180px;
 		font-size: 18px;
 		font-weight: 400;
 		color: black;
@@ -36,5 +38,6 @@
 		background-color: #F6F6F6;
 		border-bottom-left-radius: 5px;
 		border-bottom-right-radius: 5px;
+		overflow-y: auto;
 	}
 }
